🔧 Init project configuration

--- a/templates/_partials/_footer.html.twig
+++ b/templates/_partials/_footer.html.twig
@@ -1,1 +1,5 @@
-<div class="footer">FOOTER</div>
+<div class="footer">
+	<div class="text-center mt-4">
+		<p class="text-muted small">© 2026 AdminHub. Tous droits réservés.</p>
+	</div>
+</div>
